adjusted footer classes to prevent social icons from wrapping around when screen width gets smaller

--- a/style.css
+++ b/style.css
@@ -79,8 +79,17 @@ body {
     width: 510px;
 }
 
+.hc_footer_area .col-md-10, .hc_footer_area .col-md-2 {
+    float: left;
+}
+
+.hc_footer_area .col-md-2 {
+    padding-right: 30px;
+}
+
 .hc_footer_widget_area .container {
     margin-left: 0px;
+    width: 100%;
 }
 
 .header_section .container {
